fix: Resolve moar Windows build issues
  - Add boost-uuid to vcpkg installation for missing uuid headers
  - Add NOMINMAX define before windows.h includes to prevent min/max macro conflicts
    - Fixes conflicts with std::numeric_limits<T>::max() in test files
    - Applied to pch.h, logmanager.h, cow_memmgr.hpp, and page_write_tracker.hpp
  - Fix getAvailableSystemMemory declaration to be available on Windows
    - Cleaned up duplicate function declarations in util.h
    - Functions now properly declared for both GCC and Windows platforms

These changes continue the Windows MSVC build compatibility work.

  The key fixes were:
  1. Adding the missing boost-uuid library
  2. Preventing Windows from defining min/max macros that conflict with C++ standard library
  3. Ensuring memory utility functions are properly declared for Windows

Signed-off-by: Nicholas Walter Knize <nknize@apache.org>

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -92,7 +92,7 @@ jobs:
       - name: Install Boost libraries (Windows)
         if: matrix.os == 'windows-latest'
         run: |
-          vcpkg install boost-system:x64-windows boost-filesystem:x64-windows boost-thread:x64-windows boost-iostreams:x64-windows boost-variant:x64-windows boost-spirit:x64-windows boost-bind:x64-windows boost-function:x64-windows boost-config:x64-windows boost-io:x64-windows
+          vcpkg install boost-system:x64-windows boost-filesystem:x64-windows boost-thread:x64-windows boost-iostreams:x64-windows boost-variant:x64-windows boost-spirit:x64-windows boost-bind:x64-windows boost-function:x64-windows boost-config:x64-windows boost-io:x64-windows boost-uuid:x64-windows
           echo "CMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake" >> $GITHUB_ENV
           echo "VCPKG_TARGET_TRIPLET=x64-windows" >> $GITHUB_ENV
         shell: cmd
