fix: Resolve Windows DLL linking issue
  - On Windows, set RUNTIME_OUTPUT_NAME for the DLL with full version info
  - Keep ARCHIVE_OUTPUT_NAME as "XTree" for the import library (.lib)
  - This allows tests to link against XTree.lib while the DLL has the full name
  - Fixes "cannot open file 'Debug\XTree-Windows-x86_64-64-0.5.0-g19c1f6b.lib'" error

  The Windows build should now complete successfully with proper library naming.

  The key fix is that on Windows:
  - The DLL gets the full versioned name (XTree-Windows-x86_64-64-0.5.0-g19c1f6b.dll)
  - The import library stays as XTree.lib
  - Tests link against XTree.lib which loads the versioned DLL at runtime

Signed-off-by: Nicholas Walter Knize <nknize@apache.org>

--- a/core/src/main/cpp/CMakeLists.txt
+++ b/core/src/main/cpp/CMakeLists.txt
@@ -396,11 +396,19 @@ if(SRC_FILES)
 add_library(XTree SHARED ${SRC_FILES} ${HEADER_FILES})
 
 if(DEFINED LIBRARY_OUTPUT_NAME AND DEFINED BASE_VERSION AND DEFINED VERSION_MAJOR)
-    set_target_properties(XTree PROPERTIES
-        OUTPUT_NAME ${LIBRARY_OUTPUT_NAME}
-        VERSION ${BASE_VERSION}
-        SOVERSION ${VERSION_MAJOR}
-    )
+    if(WIN32)
+        # On Windows, set both runtime and import library names
+        set_target_properties(XTree PROPERTIES
+            RUNTIME_OUTPUT_NAME ${LIBRARY_OUTPUT_NAME}
+            ARCHIVE_OUTPUT_NAME XTree  # Keep import library name simple
+        )
+    else()
+        set_target_properties(XTree PROPERTIES
+            OUTPUT_NAME ${LIBRARY_OUTPUT_NAME}
+            VERSION ${BASE_VERSION}
+            SOVERSION ${VERSION_MAJOR}
+        )
+    endif()
 endif()
 
 target_link_libraries(XTree
