fix: Build XTree as static library on Windows to resolve symbol export issues
  - Changed Windows builds to use static library instead of DLL
  - Eliminates complex dllexport/dllimport requirements for static members
  - Fixes unresolved external symbols for Logger::tsp and RUNTIME_PAGE_SIZE
  - Maintains shared library builds on other platforms
  - Simplifies Windows linking process

  This resolves linking errors with boost::thread_specific_ptr and other
  static member variables that were difficult to export correctly from DLLs.

Signed-off-by: Nicholas Walter Knize <nknize@apache.org>

--- a/core/src/main/cpp/CMakeLists.txt
+++ b/core/src/main/cpp/CMakeLists.txt
@@ -402,12 +402,15 @@ source_group("Tests" FILES ${TEST_SOURCES})
 
 # Shared library target
 if(SRC_FILES)
-add_library(XTree SHARED ${SRC_FILES} ${HEADER_FILES})
-
-# On Windows, we need to export symbols for DLL
+# On Windows, build static library to avoid DLL export issues
+# On other platforms, build shared library
 if(WIN32)
-    set_target_properties(XTree PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
+    add_library(XTree STATIC ${SRC_FILES} ${HEADER_FILES})
+else()
+    add_library(XTree SHARED ${SRC_FILES} ${HEADER_FILES})
 endif()
+
+# No need for DLL export settings with static library on Windows
 
 if(DEFINED LIBRARY_OUTPUT_NAME AND DEFINED BASE_VERSION AND DEFINED VERSION_MAJOR)
     if(WIN32)
