fix: Make Windows test executable path detection more flexible
  - Updated Gradle build script to check both possible test executable locations
  - Supports both standard MSVC multi-config paths (bin/Release/) and custom paths (bin/)
  - Fixes test execution failure on Windows CI
  - Provides clearer error messages when executable is not found

Signed-off-by: Nicholas Walter Knize <nknize@apache.org>

--- a/core/src/main/cpp/build.gradle
+++ b/core/src/main/cpp/build.gradle
@@ -231,7 +231,17 @@ task testNative {
         // Platform-specific test executable path
         def testExecutable = "${nativeBuildDir}/bin/xtree_tests"
         if (System.getProperty("os.name").toLowerCase().contains("windows")) {
-            testExecutable = "${nativeBuildDir}/bin/Release/xtree_tests.exe"
+            // Check both possible locations on Windows
+            def releaseExe = "${nativeBuildDir}/bin/Release/xtree_tests.exe"
+            def directExe = "${nativeBuildDir}/bin/xtree_tests.exe"
+            
+            if (file(releaseExe).exists()) {
+                testExecutable = releaseExe
+            } else if (file(directExe).exists()) {
+                testExecutable = directExe
+            } else {
+                throw new GradleException("Test executable not found at ${releaseExe} or ${directExe}")
+            }
         }
         
         if (!file(testExecutable).exists()) {
