feat: Add configurable cache memory policies with LRU eviction
  Implement memory-budgeted cache eviction system to enable scaling to 10M+ records
  while maintaining bounded memory usage.

  Cache Policy System:
  - Add cache_policy.hpp with pluggable policy architecture
  - FixedMemoryCachePolicy: absolute memory limits (e.g., "512MB", "1GB")
  - PercentageMemoryCachePolicy: percentage of system RAM (e.g., "5%", "10%")
  - WorkloadCachePolicy: presets for bulk ingestion vs interactive queries
  - UnlimitedCachePolicy: no eviction (original behavior)
  - Support XTREE_CACHE_POLICY environment variable for runtime configuration
  - Add applyCachePolicy(), getCachePolicy(), evictCacheToMemoryBudget() APIs

  Cache Pinning for Dirty Buckets:
  - Pin dirty buckets to prevent eviction before flush to disk
  - Track dirty_pinned state to ensure proper unpin after commit
  - Add ensureDirtyPinned() for buckets marked dirty before cache insertion

  Use-After-Free Bug Fixes:
  - Fix REALLOC_CASCADE to use bucket->getParent() directly instead of searching
    by NodeID (which fails after reallocation changes the ID)
  - Fix kn_from_entry to rewire _parent pointer when buckets move between parents
    during splits - lookup bucket from cache by NodeID since getCacheRecord()
    returns null in DURABLE mode
  - Fix destructor to call close() which unpins root and clears cache
  - Fix test isolation by using unique directories per test

  Performance:
  - Convert debug log() calls to trace() for runtime level control
  - 10M record test: 71,658 rec/s with 500MB cache budget
  - Cache eviction triggers correctly when budget exceeded
  - Recovery verified: 400/400 records found after restart

  Test Coverage:
  - Add test_cache_policy.cpp: unit tests for policy parsing and configuration
  - Add test_cache_policy_stress.cpp: stress tests with memory pressure
  - Fix ParentNodeIDUpdatedOnRealloc test to use XAlloc properly

Signed-off-by: Nicholas Walter Knize <nknize@apache.org>

--- a/core/src/main/cpp/CMakeLists.txt
+++ b/core/src/main/cpp/CMakeLists.txt
@@ -606,6 +606,8 @@ set(GTEST_SOURCES
     test/test_lru_unit.cpp  # LRU cache unit tests
     test/test_lru_sharded.cpp  # Sharded LRU cache tests
     test/test_lru_sharded_stress.cpp  # Sharded LRU cache stress tests
+    test/test_cache_policy.cpp  # Cache memory policy tests
+    test/test_cache_policy_stress.cpp  # Cache policy stress tests
     # Concurrent tests saved for adaptation to new persistence layer
     # test/test_xtree_concurrent_search.cpp
     # test/test_xtree_simple_concurrent.cpp
